examples/test/testpolicy10380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10380
  namespace: namespace448
spec:
  podSelector:
    matchLabels:
      key15: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value21
          key47: value2
      podSelector:
        matchLabels:
          key43: value29
          key23: value26
          key11: value26
